# Cross-Chain

./: Cargo.toml  README.md  genesis-state  genesis-wasm  init_start.sh  para-1000-genesis  para-1000-wasm  para-2000-genesis  para-2000-wasm  rococo-local-cfde.json  rococo-local-parachain-1000-raw.json  rococo-local-parachain-2000-raw.json  rococo-local-parachain-plain.json
node/src/: chain_spec.rs  service.rs
primitives/common-traits/: Cargo.toml
primitives/common-traits/src/: lib.rs
primitives/common-types/: Cargo.toml
primitives/common-types/src/: lib.rs  tokens.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/weights/: mod.rs  orml_currencies.rs
